--- a/dsw_config.conf
+++ b/dsw_config.conf
@@ -72,3 +72,7 @@ fmsdb.url=jdbc:db2://9.208.63.103:50001/FMSSATDB
 epm.environment=staging
 epm.skapi.token.host=token-generator-staging.epm2.not-for-users.ibm.com:443
 epm.skapi.dimnsn.host=services-staging.epm2.not-for-users.ibm.com
+
+# 2021-11-17 Tim
+#EPM DB Connection
+flexdb.url=jdbc:db2://db2w-vaokkda.us-south.db2w.cloud.ibm.com:50001/BLUEDB
