--- a/dsw_config.conf
+++ b/dsw_config.conf
@@ -75,4 +75,4 @@ epm.skapi.dimnsn.host=services-staging.epm2.not-for-users.ibm.com
 
 # 2021-11-17 Tim
 #EPM DB Connection
-flexdb.url=jdbc:db2://db2w-vaokkda.us-south.db2w.cloud.ibm.com:50001/BLUEDB
+flexdb.url=jdbc:db2://db2w-vaokkda.us-south.db2w.cloud.ibm.com:50001/BLUDB
